feat:新增 city model

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "egg-validate": "^1.0.0",
     "jwt-simple": "^0.5.1",
     "moment": "^2.22.2",
+    "pinyin": "^2.8.3",
     "time-formater": "^1.0.3"
   },
   "devDependencies": {
