--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,11 @@
     "egg-cors": "^2.0.0",
     "egg-mongoose": "^2.1.1",
     "egg-scripts": "^2.1.0",
+    "egg-static": "^2.1.1",
     "egg-validate": "^1.0.0",
+    "egg-view-assets": "^1.3.0",
+    "formidable": "^1.2.1",
+    "gm": "^1.23.1",
     "jwt-simple": "^0.5.1",
     "moment": "^2.22.2",
     "pinyin": "^2.8.3",
