--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,7 @@
     "gm": "^1.23.1",
     "jwt-simple": "^0.5.1",
     "moment": "^2.22.2",
-    "pinyin": "^2.8.3",
-    "time-formater": "^1.0.3"
+    "pinyin": "^2.8.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
