--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "blueimp-md5": "^2.10.0",
+    "captchapng": "^0.0.1",
     "egg": "^2.0.0",
     "egg-cors": "^2.0.0",
     "egg-mongoose": "^2.1.1",
