--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "better-scroll": "^1.13.2",
     "fastclick": "^1.0.6",
+    "showdown": "^1.8.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
