--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "blueimp-md5": "^2.10.0",
     "captchapng": "^0.0.1",
     "egg": "^2.0.0",
+    "egg-alinode": "^2.0.1",
     "egg-cors": "^2.0.0",
     "egg-mongoose": "^2.1.1",
     "egg-scripts": "^2.1.0",
