--- a/admin/package.json
+++ b/admin/package.json
@@ -10,13 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "echarts": "^4.2.0-rc.2",
-    "element-ui": "^2.4.8",
-    "moment": "^2.22.2",
-    "vue": "^2.5.2",
-    "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -29,7 +23,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
