--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "better-scroll": "^1.13.2",
-    "fastclick": "^1.0.6",
-    "showdown": "^1.8.7",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "better-scroll": "^1.13.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -28,7 +23,6 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
